[tool.poetry]
name = "harvest"
version = "0.1.0"
description = "Harvest"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
mypy = "^0.982"
types-requests = "^2.28.11.4"
bpython = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
